tests/baselines/reference/parserES5ComputedPropertyName5(target=es5).errors.txt
parserES5ComputedPropertyName5.ts(2,6): error TS2304: Cannot find name 'e'.


==== parserES5ComputedPropertyName5.ts (1 errors) ====
    interface I {
        [e]: number 
         ~
!!! error TS2304: Cannot find name 'e'.
    }